[package]
name = "seca"
description = "Rust bindings for the Sector's Edge SECA API"
readme = "README.md"
license = "Apache-2.0"
version = "0.1.0"
authors = ["ezekiel <ezekiel@arcadian.garden>"]
repository = "https://github.com/ezekielathome/seca"
keywords = ["api", "sectors-edge"]
categories = ["api-bindings"]
edition = "2021"

[lib]
name = "seca"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.85"
thiserror = "1.0.31"
url = "2.2.2"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.reqwest]
version = "0.11"
features = [ "blocking", "json" ]